<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@mipmap/spring"
    tools:context=".ProfileActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@mipmap/pppp"
        android:layout_marginTop="10dp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:id="@+id/Name_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"

            android:textSize="20dp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:id="@+id/Descripcion_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/Descripcion"
            android:textAllCaps="true"

            android:textSize="20dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/Followers_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Followers"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="10dp"
            android:textSize="17dp"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:layout_marginTop="30dp"/>
        <TextView
            android:id="@+id/Projects_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Projects"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="30dp"
            android:textSize="17dp"
            android:textAllCaps="true"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/Starts_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Stars"
            android:layout_marginLeft="55dp"
            android:textSize="17dp"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:layout_marginTop="30dp"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/NumberFollowers_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Number_followers"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="10dp"
            android:textSize="17dp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"/>
        <TextView
            android:id="@+id/NumberProjects_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Number_Projects"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="10dp"
            android:textSize="17dp"

            android:textStyle="bold"/>

        <TextView
            android:id="@+id/NumberStars_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Number_Start"
            android:layout_marginLeft="90dp"
            android:textSize="17dp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"/>

    </LinearLayout>





  </LinearLayout>














